--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -1964,4 +1964,46 @@ a.md-button.download-button:hover {
   fill: #ffffff !important;
 }
 
+/* Scroll margin for TOC anchor links */
+
+h1[id], h2[id], h3[id], h4[id], h5[id], h6[id],
+.md-typeset h1[id], .md-typeset h2[id], .md-typeset h3[id],
+.md-typeset h4[id], .md-typeset h5[id], .md-typeset h6[id] {
+  scroll-margin-top: 100px;
+}
+
+:target {
+  scroll-margin-top: 100px;
+}
+
+/* Search icon visible in light mode (dark icon on light background) */
+[data-md-color-scheme="default"] .md-search__form .md-search__icon {
+  color: #4a5568 !important;
+}
+
+[data-md-color-scheme="default"] .md-search__form .md-search__icon svg {
+  fill: #4a5568 !important;
+}
+
+[data-md-color-scheme="default"] .md-search__form .md-search__icon svg path {
+  fill: #4a5568 !important;
+}
+
+/* Clear/close button visible in light mode */
+[data-md-color-scheme="default"] .md-search__options button {
+  color: #4a5568 !important;
+}
+
+[data-md-color-scheme="default"] .md-search__options button svg {
+  fill: #4a5568 !important;
+}
+
+[data-md-color-scheme="default"] .md-search__options button:hover {
+  color: #1a202c !important;
+}
+
+[data-md-color-scheme="default"] .md-search__options button:hover svg {
+  fill: #1a202c !important;
+}
+
 /* End of theme */
