--- a/docs/assets/stylesheets/extra.css
+++ b/docs/assets/stylesheets/extra.css
@@ -6754,6 +6754,9 @@ nav.md-footer__inner {
 @media screen and (min-width: 76.25em) {
   [dir=ltr] .md-nav--primary .md-nav__list {
     padding-left: 0rem;
+    .md-nav__list {
+      margin-top: 8px;
+    }
   }
 }
 
